--- a/styles.css
+++ b/styles.css
@@ -492,3 +492,9 @@ ul li:nth-child(3)::before {
   text-decoration: none;
   color: white;
 }
+
+ 
+.email{
+  text-decoration: none;
+  color: white;
+}
